--- a/main.html
+++ b/main.html
@@ -219,7 +219,7 @@
                 productHTML += `
                     <div class="item col-3">
                         <img src="${product.image}" alt="${product.title}" width="200"/>
-                        <a href="/trangchitiet.html?id=${product.id}" class="text-body">${product.title}</a>
+                        <a href="./trangchitiet.html?id=${product.id}" class="text-body">${product.title}</a>
                         <p>${product.price}</p>
                     </div>
                 
